# TorchOS

docker/: Dockerfile  build.sh
docs/: architecture.md  datasets.md  development.md  gpu.md  hardware-testing.md  iso-build-mint.md  labs.md  ui.md
scripts/: build-iso.sh  install-cubic-mint.sh  setup-mint.sh
scripts/cubic/: setup-iso.sh
scripts/mock-gpu/: nvidia-smi
tests/ldtp/: basic_ui_test.py
torch-cli/: Cargo.toml
torch-cli/src/: main.rs
torch-cli/src/commands/: dataset.rs  init.rs  lab.rs
torch-cli/src/system/: btrfs.rs  gpu_detect.rs  isolation.rs
torch-cli/src/types/: lab.rs
torch-cli/src/ui/: dashboard.rs
ui/: torch-labs.desktop
ui/nemo-actions/: torch-open-lab.nemo_action
ui/src/: torch-hud.py  torch-labs-gui.py
ui/theme/gtk-3.0/: gtk.css
vm/: run-vm.sh
